Removed 1.5 specific valueOf methods